# job-discovery-engine

./: .env.example  .gitignore  API_CONTRACT.md  CHANGELOG.md  EXTRACTION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/job_discovery_engine/: __init__.py  api.py  cli.py  config.py  discovery_config.json  models.py  outputs.py  pipeline.py  rerankers.py  scoring.py  shared.py  sources.py  text_utils.py
tests/: test_contract.py  test_scoring.py
