[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-discovery-engine"
version = "0.2.0"
description = "Discovery engine extracted from job-application-insights"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=job_discovery_engine --cov-report=term-missing --cov-fail-under=30"
